Version 0.9.46   unreleased

    * Bump up to AppEngine v1.9.18 just to stay up-to-date.
    * Bump up to CedarBuild v0.8.14 and CedarCommon v5.2.0.
    * Adjust build.gradle now that CedarCommon is distributed at Maven Central.

Version 0.9.45   01 Feb 2015

    * Convert from AppEngine's federated login mechanism to the Google Account login mechanism.
    * Bump up to CedarCommon v5.1.0 to get support for Google Accounts authentication.
    * Bump up to AppEngine v1.9.17 just to stay up-to-date.

Version 0.9.44   10 Jan 2015

    * Use common event handler classes from CedarCommon in a few places.
    * Start phasing out OpenId logins, since Google will be removing the federated login mechanism.
    * Remove OpenId login option for AOL, MySpace, and myOpenId, since there are no existing users.
    * Change the login selector to remind Yahoo users that their access will be removed February 1.

Version 0.9.43   01 Dec 2014

    * Upgrade from GWT 2.7.0-RC1 to the official GWT 2.7.0 release.
    * Bump up to CedarCommon v5.0.2 to take advantage of Assertions.assertListEquals().
    * Change gradle build process to generate a working Eclipse launch config with -nosuperDevMode.
    * Bump up to CedarBuild v0.8.12 to account for changes in GWT 2.7.0 relative to RC1.

Version 0.9.42   09 Nov 2014

    * Bump up to CedarCommon v5.0.1 and CedarBuild v0.8.11 to get support for GWT 2.7.x.
    * Bump up to AppEngine v1.9.15 and upgrade a variety of other dependencies to latest version.
    * Update client code that uses AbstractDropdownList to handle change in interface.

Version 0.9.41   28 Oct 2014

    * Bump up to CedarCommon v4.9.1 to get improvements for multi-tabbed views.

Version 0.9.40   23 Oct 2014

    * Bump up to CedarCommon v4.9.0, to get new GwtCacheControlFilter class.
    * Try to improve deploy behavior with better cache configuration for GWT files.

Version 0.9.39   09 Oct 2014
