@@ -8,7 +8,7 @@ config_gwtVersion=2.7.0
 config_appEngineVersion=1.9.18
 
 # CedarCommon version
-config_cedarCommonVersion=5.2.0
+config_cedarCommonVersion=5.2.1
 
 # Whether Mercurial labeling is enabled
 config_mercurialLabelEnabled=true
