@@ -53,7 +53,7 @@ Any version of EclEmma will work for the unit tests.  However, you'll need a
 specially patched version of the plugin to get coverage for GWT client-side
 tests.  You can download a patched version of EclEmma here:
 
-   http://code.google.com/p/santa-exchange/downloads/detail?name=eclemma-1.3.2-gwt.zip&can=2&q=
+   https://bitbucket.org/cedarsolutions/santa-exchange/downloads/eclemma-1.3.2-gwt.zip
 
 To get coverage for the unit tests, right-click on UnitTestSuite and choose
 Coverage As > JUnit Test.  Let the test suite run.  It will probably
