@@ -1,8 +1,9 @@
 Version 0.9.46   unreleased
 
     * Bump up to AppEngine v1.9.18 just to stay up-to-date.
-    * Bump up to CedarBuild v0.8.14 and CedarCommon v5.2.0.
+    * Bump up to CedarBuild v0.8.14 and CedarCommon v5.2.1.
     * Adjust build.gradle now that CedarCommon is distributed at Maven Central.
+    * Other minor adjustments to code and docs now that projects is at BitBucket.
 
 Version 0.9.45   01 Feb 2015
 
